--- a/views/aboutus/aboutus.handlebars
+++ b/views/aboutus/aboutus.handlebars
@@ -1,14 +1,19 @@
 
 <div class="jumbotron-aboutus">
-    <div class="wrap-aboutus-h1">
+  {{!-- <div class="container"> --}}
+
+    <div class="row">
+        <div class="col-lg-12">
+
+          <h1 class="aboutus-h1"> Helping those with <strong id="eye-diseases">Retinal Disease</strong> <br>find life changing treatments </h1> 
+          <p class="what-is-sci"><strong></strong></p>
+              {{!-- <a href="/contact_us/contact" type="submit" class="btn btn-primary" id="main-btn">Contact</a> --}}
+          
         
-        <h1 class="aboutus-h1"> Helping those with <strong id="eye-diseases">Retinal Disease</strong> <br>find life changing treatments 
-        <p class="what-is-sci"><strong></strong></p>
-            <a href="/contact_us/contact" type="submit" class="btn btn-primary" id="main-btn">Contact</a>
-        </h1> 
-        
+        </div>
         
     </div>
+  {{!-- </div> --}}
 </div>
 
 <div class="row">
