--- a/views/contactus/contact_us.handlebars
+++ b/views/contactus/contact_us.handlebars
@@ -1,9 +1,9 @@
 <div class="row">
 
-  <div class="col-lg-12" id="wrap-sign-in-form">
+  <div class="col-lg-12" id="wrap-contact-us-form">
         <h2>CONTACT US</h2>
 
-    <form action="/contact_us/send" method="post" class="form-horizontal form-login-new">
+    <form action="/contact_us/send" method="post" class="form-horizontal form-contact-us">
 
         <div class="form-group">
           <label class="col-sm-2 control-label">Name: </label>
