--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,7 +4,19 @@
         <div class="col-lg-12" id="wrap-main-h1">
   
           <h1 class="main-h1"> <br><strong id="index-title">Find a retinal disease treatment.</strong></h1>
+          <h1 style="text-align: center" id="sub-main-h1"> CESARCELLS allows you to contact clinical trials you are likely to qualify for based on our assessment. </h1>
+          {{!-- <a href="/users/sign-in" type="submit" class="btn btn-primary" id="main-btn"> <span class="glyphicon glyphicon-arrow-right icon-arrow"> </span>       Register Now</a> --}}
               <a id="scroll-to-1"><span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span></a>
+          
+             
+        </div>
+      </div> 
+
+      <div class="row">
+        <div class="col-lg-12">
+      
+      
+              {{!-- <a id="scroll-to-1"><span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span></a> --}}
           
              
         </div>
@@ -28,9 +40,9 @@
              <p class="lead index-page">
              Cesarcells.com helps you find cutting edge clinical trials. 
 
-             It is an independent resource on Stargardts disease as well as other <strong id="index-title">Age Related Macular Degeneration (ARMD)</strong> eye diseases. 
+             It is an independent resource on <strong id="index-title">Age Related Macular Degeneration (ARMD)</strong> and other retinal diseases. 
 
-             We are not affiliated in any way with any medical company and we have a team of health professionals analyzing the full body of research.
+            We have a team of health professionals analyzing the full body of research and clinical trial criteria for you, so you don't have to waste time reading through endless medical documentation. 
              </p> <br>
 
              <p class="what-is-sci"><strong>We currently have over 8 ARMD clinical trials and references to scientific research.</strong></p>
@@ -54,14 +66,16 @@
 
                
 
-                <p class="lead index-page">Take a 5 minute assessment to see if you <strong id="index-title">qualify for clinical trials.</strong> 
+                <p class="lead index-page">Take a <strong id="index-title">3-5 minute assessment</strong> to see if you're likely to <strong id="index-title">qualify for clinical trials.</strong> 
                Then <strong id="index-title">contact the clinics</strong> you qualified for.</p>
+
+
 
 
                 
                 
                
-                <a class="btn btn-primary btn-lg" href="#" role="button" id="learn-more-how">Learn More About Us</a>
+                <a class="btn btn-primary btn-lg" href="#" role="button" id="learn-more-how">Learn More</a>
 
                 
            
@@ -187,7 +201,7 @@
 
                             <ul class="list" style="text-align: left">
                               <li><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>     Learn about your genetic susceptibility to certain <strong id="index-title">retinal diseases</strong></li><br>
-                              <li><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>     Know <strong id="index-title">your risk for specific retinal diseases</strong></li><br>
+                              <li><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>     Find out if you are  <strong id="index-title">homozygous, or heterozygous for each gene.</strong></li><br>
 
                               <li><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>     Understand the <strong id="index-title">SNPs that contribute to genetic retinal diseases</strong></li>
 
