--- a/views/account/privacy.handlebars
+++ b/views/account/privacy.handlebars
@@ -1,6 +1,6 @@
 <div class="row">
 
-<div style="margin-top: 140px; padding: 40px; background-color: whitesmoke; border-radius: 5%; margin-left: 20%" class="col-lg-8">
+<div id="cesarcells-consent-language" class="col-lg-8">
 <h2 id="terms-h2">CesarCells Consent Language</h2>
 Thank you for using our website.
 
