--- a/views/partials/main-nav.handlebars
+++ b/views/partials/main-nav.handlebars
@@ -55,7 +55,7 @@
             <a href="/users/sign-in" id="login-nav-text" class="navbar-link" data-toggle="" role="button" aria-haspopup="true" aria-expanded="false">LOGIN</a><i class="fa fa-sign-in" aria-hidden="true"></i>
 
           </li>
-          <li class="">
+          <li class="text-right">
             <a href="/users/sign_up" id="signup-nav-text">SIGNUP</a>
           </li>
         </ul>
