--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -1,5 +1,5 @@
 
-<div class="container">  
+ 
 <div class="container">
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 
@@ -36,10 +36,12 @@
               <a href="#" class="dropdown-toggle" id="a-dash-one" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-cogs" aria-hidden="true"></i>
 Tools <span class="caret"></span></a>
               <ul class="dropdown-menu" aria-labelledby="dLabel">
-              {{!-- {{#unless }} --}}
-                <li><a href="/tools/genetic">Connect With 23AndMe</a></li>
+              {{#if user.geneticTestTaken}}
+                <li><a href=""></a></li>
+                {{else}}               
+                <li><a href="/tools/gene-data-approval">Connect With 23AndMe</a></li>
                 <li role="separator" class="divider"></li>
-              {{!-- {{/unless}} --}}
+              {{/if}}
                 <li><a href="/tools/amsler-test">Take The Amsler Test</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="/tools/start-health-assessment">Take Clinical Trial Assessment</a></li>
@@ -53,8 +55,8 @@ Trials <span class="caret"></span></a>
                 </ul>
             </li>
             <li class="dropdown">
-            <a href="/users/dashboard" class="" id="a-dash-four" data-toggle="" role="button" aria-haspopup="true" aria-expanded="false"> <i class="fa fa-user" aria-hidden="true"></i>
-My Account </a>
+            <a href="/users/dashboard" class="" id="a-dash-four" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <i class="fa fa-user" aria-hidden="true"></i>
+My Account <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="/users/dashboard">Dashboard</a></li>
                 <li role="separator" class="divider"></li>
@@ -75,4 +77,3 @@ My Account </a>
     </div>
     </nav>
   </div>
-</div>
