--- a/views/tools/genetic_report.handlebars
+++ b/views/tools/genetic_report.handlebars
@@ -3,17 +3,27 @@
 </div>
 <br>
 <br>
-{{#if info}}
-<div class="alert alert-info" style="margin-top: 100px">{{info}}</div>
-{{/if}}
+
+<div class="container">
 
 
-{{#each genotypes}}
-<h1 style="margin-top: 200px">{{genotypes}}</h1>
-{{/each}}
-<div class="row">
-  <div class="col-md-12" id="wrap-23-btn">
-    <a id="twothree-btn" href="/auth"><img src="/assets/images/23andMe.png"/> </a>
+  {{#if info}}
+  <div class="alert alert-info" style="margin-top: 100px">{{info}}</div>
+  {{/if}}
+
+ 
+
+  {{#if agreed}}
+  <div class="alert alert-info" style="margin-top: 100px">{{agreed}}</div>
+  {{/if}}
+
+  {{#each genotypes}}
+  <h1 style="margin-top: 200px">{{genotypes}}</h1>
+  {{/each}}
+  <div class="row">
+    <div class="col-md-12" id="wrap-23-btn">
+      <a id="twothree-btn" href="/auth"><img src="/assets/images/23andMe.png"/> </a>
+    </div>
   </div>
 </div>
 
